koding/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: koding
  labels:
    app: koding
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: koding
    spec: 
      containers:
        - name: koding-be
          image: koding/koding
          args: 
            - --version
            - master
            - --hostname
            - koding.sudojoss.com
            - --host
            - koding.sudojoss.com
          ports:
            - containerPort: 8090
        - name: mongo
          args:
          - --noprealloc
          - --nojournal
          - --smallfiles
          image: mongo:2.4
        - name: postgres
          image: koding/postgres:20160824
          # volumeMounts:
          # - mountPath: /var/lib/postgresql
          #   name: postgres
        - name: rabbitmq
          image: rabbitmq:3-management
        - name: redis
          image: redis
      # volumes:
      # - name: postgres
      #   persistentVolumeClaim:
      #     claimName: koding-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: koding
  labels:
    app: koding
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    app: koding
